Fixed entry-image being stretched on small devices

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -109,6 +109,15 @@ body {
 	height: 200%;
 	min-height: $feature-image-height;
 	overflow: hidden;
+
+	background-position: center center;
+	background-size: cover;
+	background-repeat: no-repeat;
+
+	@media #{$medium} {
+		background: none;
+	}
+
 	&:after {
 		content: '';
 		position: absolute;
@@ -117,8 +126,11 @@ body {
 		width: 100%;
 		height: 100%;
 		background-color: rgba($base-color,0.3);
+
 	}
+	// We use background for the image
 	img {
+		display: none;
 		position: absolute;
 		top: 0;
 		left: 0;
@@ -127,6 +139,10 @@ body {
 		margin: auto;
 		min-width: 50%;
 		min-height: $feature-image-height; // match .entry-image min-height
+
+		@media #{$medium} {
+			display: block;
+		}
 	}
 }
 // Feature Image height on Front Page
